# livraria-curso-django

./: db.sqlite3  pyproject.toml  requirements.txt
core/: admin.py  models.py  serializers.py  views.py
core/migrations/: 0001_initial.py  0002_autor.py  0003_alter_autor_options_livro.py  0004_livro_autores.py  0005_compra.py  0006_itenscompra.py
core/views/: __init__.py  categoriaApiView.py  categoriaClass.py  categoriaGeneric.py  compra.py  livro.py
livraria/: settings.py  urls.py
