[tool.poetry]
name = "livraria"
version = "0.1.0"
description = ""
authors = ["Fernando Bonde Leonelli <fernandobondeleonelli@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
