[tool.poetry]
name = "livraria"
version = "0.1.0"
description = ""
authors = ["Fernando Bonde Leonelli <fernandobondeleonelli@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0"
djangorestframework = "^3.14.0"
flake8 = "^6.1.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
black = "^23.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
